--- a/week 1 - intro to Python/week_1 - demo.ipynb
+++ b/week 1 - intro to Python/week_1 - demo.ipynb
@@ -60,7 +60,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 1. Variables and basic math in Python"
+    "#### 1. Variables and math in Python"
    ]
   },
   {
@@ -258,10 +258,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "NOTE: Use valid variable names:\n",
+    "NOTE: Make sure you using valid variable names!\n",
     "* Variable names can contain letters, numbers, and the underscore character.\n",
     "* You can't begin variable names with a digit, or use any of Python's _reserved words_ (eg. False, None, zip, else, class, ...).\n",
-    "* Don't accidentally use a space in the middle of a variable name!\n",
+    "* Don't use a space in the middle of a variable name.\n",
     "\n",
     "| result | variable name |\n",
     "|----|----|\n",
@@ -311,10 +311,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 2. Data types 1: int, float, string, Boolean\n",
-    "In Python, everything -- booleans, integers, floats, dictionaries and functions -- is implemented as an object. Each object has a type, which determines what can be done with the data it contains. For instance, if an object is type _int_, you can add it to another _int_. \n",
+    "#### 2. Basic data types: int, float, string, Boolean\n",
+    "These object types are the most basic building blocks when handling data in Python. Note that Python is an object-oriented language. Each object has a type, which determines what can be done with it. For instance, an object of type _int_ can be added to another _int_.\n",
     "\n",
-    "In compiled languages like C++, the programmer has to declare the type of any variable before using it. In Python, the type is inferred at run-time."
+    "In compiled languages like C++, the programmer has to declare the type of any variable before using it. In Python, the type is inferred at run-time. This keeps the syntax much more simple and natural. You can check the type of an object at any time. Learn to declare variables so Python infers the data type that you want."
    ]
   },
   {
@@ -341,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -355,9 +355,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# YOUR ACTION\n",
+    "# the possible values for a Boolean are True or False\n",
     "\n",
-    "# Create a dictionary with the characteristics of your favorite pet (eg. size, breed, favorite food)"
+    "my_enrollment_status = True\n",
+    "type(my_enrollment_status)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# use isinstance to check an object's type (answer is a Boolean)\n",
+    "isinstance(course_name, int)"
    ]
   },
   {
@@ -369,58 +380,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hello world\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# pass string directly to print function\n",
-    "\n",
     "print(\"Hello world\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Python for Data Science\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# or pass a variable to print function\n",
-    "\n",
     "print(course_name)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Python for Data Science: April 2019'"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Add (concatenate) two strings together\n",
     "date = \"April 2019\"\n",
@@ -431,42 +413,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "23"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# how long is the string?\n",
-    "\n",
     "len(course_name)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Pytho'"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# extract a character with []\n",
     "# specify the offset: my_string[start_point:end_point]\n",
@@ -475,20 +434,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'for'"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# get a sub-string between two index positions\n",
     "course_name[7:10]"
@@ -496,20 +444,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Data Science'"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# from the 11th character to the end\n",
     "course_name[11:]"
@@ -517,20 +454,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['Python', 'for', 'Data', 'Science:', 'Feb', '2019']"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Data types are defined as classes. Classes have methods attached to them, which you can access with dot notation.\n",
     "# Example: strings have a method '.split()' that returns a list of component parts. \n",
@@ -540,20 +466,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Python for Data Science: April 2029'"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Or we could replace characters using the .replace() method\n",
     "full_title.replace('1','2')"
@@ -561,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -638,8 +553,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 3. Introducing more complex data types: lists, tuples and dictionaries\n",
-    "We already looked at integers, floats and strings. Think of these as atoms. Next, we will look at data types that combine those basics types in more complex ways. Lists, tuples and dictionaries are containers for other pieces of data; think of these as molecules.\n",
+    "#### 3. Further data types: lists, tuples and dictionaries\n",
+    "Ints, floats and strings are the most basic data structures (think of them as atoms). Next, we'll look at data types that combine those atoms together in more complex ways. Lists, tuples and dictionaries are containers for other data. They can be used to combine your data in more complex ways (think molecules rather than atoms).\n",
     "\n",
     "|Data structure | Properties| Syntax|\n",
     "|----|----|----|\n",
@@ -674,12 +589,12 @@
    "metadata": {},
    "source": [
     "#### 3.1 Manipulating lists\n",
-    "Lists are ordered sequences denoted by square brackets. They're helpful when your data has a meaningful order, and may need to be changed in place. You can put strings, floats, integers, or any of Python's more complex data types into a list."
+    "Lists are ordered sequences denoted by square brackets. They're helpful when your data has an order, and may need to be changed in place. You can put strings, floats, integers, or any of Python's more complex data types into a list."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -720,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -730,20 +645,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[1, 3, 5, 2, 4, 6]"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# concatenate two lists\n",
     "odds = [1,3,5]\n",
@@ -754,21 +658,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\u001b[0;31mSignature:\u001b[0m \u001b[0modds\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msort\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkey\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mreverse\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-       "\u001b[0;31mDocstring:\u001b[0m Stable sort *IN PLACE*.\n",
-       "\u001b[0;31mType:\u001b[0m      builtin_function_or_method\n"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Lists, like other data types, have methods associated with them. These are accessed through dot notation.\n",
     "# Use tab complete to find helpful methods! \n",
@@ -778,20 +670,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "False"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# test for a value in your list\n",
     "'Saturday' in weekdays"
@@ -823,7 +704,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# create a dictionary\n"
+    "# add dictionary content, or too much already?\n"
    ]
   },
   {
@@ -855,7 +736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -866,20 +747,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "False"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# But compare them using '=='\n",
     "a == b"
@@ -887,20 +757,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Logic expressions evaluate to True or False (datatype: Boolean)\n",
     "\n",
@@ -911,20 +770,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "bool"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "type(test)"
    ]
@@ -942,7 +790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -951,17 +799,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "no thanks\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "if food == 'veg':\n",
     "    print ('yum')\n",
@@ -1015,112 +855,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Part 2: Exercises\n",
-    "Pick one of these exercises. Try to complete it within the time allotted."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### EXERCISE 1: Age calculator\n",
-    "    \n",
-    "Write a program that will:\n",
-    "1. Define a variable 'birth_year'\n",
-    "2. Define a variable 'current_year'\n",
-    "3. Calculate the person's age from these two\n",
-    "4. Print the output in format (\"You are x years old.\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# YOUR CODE HERE:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### EXERCISE 2: Sports star salaries\n",
-    "\n",
-    "1. Define three variables, player, season_length, and annual_salary. Just use a Google search to find some values.\n",
-    "2. Write a script to calculate how much the player earns (a) per month, and (b) for each day in the season.\n",
-    "3. Print your output neatly.\n",
-    "4. Your team won the league so your player gets a 33% bonus. Recalculate.\n",
-    "\n",
-    "**BONUS POINTS**: find a way to limit the salary to two decimal points when printing it."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# YOUR CODE HERE:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### EXERCISE 3: Higher or lower?\n",
-    "\n",
-    "Write a program to:\n",
-    "1. Generate a random number (kept secret from the user)\n",
-    "2. Ask the user to guess the number\n",
-    "3. Tell them if they were correct, too high, or too low.\n",
-    "\n",
-    "BONUS POINTS: limit the number of guesses to 5."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 100,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      " 4\n"
-     ]
-    }
-   ],
-   "source": [
-    "# YOUR CODE HERE:\n",
-    "\n",
-    "import random\n",
-    "random_number =                          # hint: try the random.randint() function\n",
-    "guess_number = input()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### EXERCISE 4: FizzBuzz\n",
-    "\n",
-    "Write a script to:\n",
-    "\n",
-    "* Print out the numbers from 1 to 20 but replacing numbers with 'Fizz' if divisible by 3, 'Buzz' if divisible by '5', and 'FizzBuzz' if divisible by 3 and 5.\n",
-    "\n",
-    "Hint: the 'mod' operator, denoted %, is widely used to check divisibility. Example: 10 % 2 == 0.\n",
-    "\n",
-    "(Any questions about a Python function, just google it!!). "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# YOUR CODE HERE:"
+    "#### --> This concludes our tour of data structures and brief introduction to control flow. We'll go into more depth on structures like dictionaries next week, and cover control flow in more detail."
    ]
   }
  ],
